--- a/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
@@ -65,21 +65,21 @@
                   <Region layoutX="10.0" layoutY="72.0" prefHeight="21.0" prefWidth="394.0" />
                   <HBox prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickNewCategory-GUI" wrappingWidth="155.0" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.pickNewCategory" wrappingWidth="155.0" />
                         <Region prefHeight="40.0" prefWidth="81.0" HBox.hgrow="ALWAYS" />
                         <ChoiceBox prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="228.0" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputNewTaskName-GUI" wrappingWidth="155.0" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputNewTaskName" wrappingWidth="155.0" />
                         <Region prefHeight="93.0" prefWidth="65.0" HBox.hgrow="ALWAYS" />
                         <TextField prefHeight="23.0" prefWidth="155.0" promptText="%ui.TaskName" style="-fx-background-color: #7190de;" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="317.0" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputNewDueDate-GUI" wrappingWidth="155.0" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputNewDueDate" wrappingWidth="155.0" />
                         <Region prefHeight="40.0" prefWidth="75.0" HBox.hgrow="ALWAYS" />
                         <DatePicker prefHeight="23.0" prefWidth="155.0" />
                      </children>
