--- a/src/main/resources/edu/ncku/todo/ui/category.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/category.fxml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import java.lang.String?>
 
-<AnchorPane fx:id="root"
-            prefHeight="480.0" prefWidth="340.0"
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="edu.ncku.todo.ui.CategoryController">
+<AnchorPane fx:id="root" prefHeight="480.0" prefWidth="340.0"
+   xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="edu.ncku.todo.ui.CategoryController">
 
    <children>
-      <TableView fx:id="categoryTable" prefHeight="180.0" prefWidth="325.0" AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0">
-            <columns>
-               <TableColumn fx:id="taskNameColumn" text="任務名稱" maxWidth="137.0" minWidth="137.0" prefWidth="137.0" resizable="false" sortable="false" style=" -fx-background-color: #a4bfeb; -fx-border-color: transparent lightgray transparent transparent; -fx-border-width: 0 1 0 0; " />
-               <TableColumn fx:id="taskDueDateColumn" text="任務期限" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" style=" -fx-background-color: #a4bfeb; -fx-border-color: transparent lightgray transparent transparent; -fx-border-width: 0 1 0 0; " />
-               <TableColumn fx:id="taskStatusColumn" text="任務狀態" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" style=" -fx-background-color: #a4bfeb; -fx-border-color: transparent lightgray transparent transparent; -fx-border-width: 0 1 0 0; " />
-            </columns>
-            <opaqueInsets>
-               <Insets/>
-            </opaqueInsets>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-            </columnResizePolicy>
-        </TableView>
-    </children>
+      <TableView fx:id="categoryTable" prefHeight="180.0" prefWidth="325.0"
+         AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+         AnchorPane.topAnchor="0.0">
+         <columns>
+            <TableColumn fx:id="taskNameColumn" maxWidth="137.0" minWidth="137.0" prefWidth="137.0"
+               resizable="false" sortable="false"
+               style="-fx-background-color: #a4bfeb; -fx-border-color: gray; -fx-border-width: 0 1 0 0;"
+               text="任務名稱" />
+            <TableColumn fx:id="taskDueDateColumn" maxWidth="100.0" minWidth="100.0"
+               prefWidth="100.0" resizable="false" sortable="false"
+               style="-fx-background-color: #a4bfeb; -fx-border-color: gray; -fx-border-width: 0 1 0 0;"
+               text="任務期限" />
+            <TableColumn fx:id="taskStatusColumn" maxWidth="100.0" minWidth="100.0"
+               prefWidth="100.0" resizable="false" sortable="false"
+               style="-fx-background-color: #a4bfeb; -fx-border-color: gray; -fx-border-width: 0 1 0 0;"
+               text="任務狀態" />
+         </columns>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </children>
 </AnchorPane>
