--- a/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
@@ -56,7 +56,7 @@
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickTaskToModify" wrappingWidth="155.0" />
                               <Region prefHeight="36.0" prefWidth="78.0" HBox.hgrow="ALWAYS" />
-                              <ChoiceBox fx:id = "pickTaskList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                              <ChoiceBox fx:id = "pickTaskList" onAction="#pickTaskListClicked" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
                            </children>
                         </HBox>
                      </children>
