新增任務表格(依日期)功能 重構相關控制器與視圖 新增Task.dateFormat等

--- a/src/main/resources/edu/ncku/todo/ui/calendarCell.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/calendarCell.fxml
@@ -12,12 +12,12 @@
 <StackPane prefHeight="60.0" prefWidth="60.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.CellController">
    <children>
       <Rectangle fx:id="calendarBox" arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="60.0" stroke="LIGHTGRAY" strokeType="INSIDE" width="60.0" />
-      <Ellipse fx:id="notificationSpot" fill="RED" radiusX="10.0" radiusY="10.0" stroke="RED" strokeType="INSIDE" visible="false" StackPane.alignment="TOP_RIGHT">
+      <Ellipse fx:id="notificationSpot" fill="RED" onMouseClicked="#popupTable" radiusX="10.0" radiusY="10.0" stroke="RED" strokeType="INSIDE" visible="false" StackPane.alignment="TOP_RIGHT">
          <StackPane.margin>
             <Insets right="3.0" top="3.0" />
          </StackPane.margin>
       </Ellipse>
-      <Label fx:id="notificationLabel" alignment="CENTER" contentDisplay="CENTER" prefWidth="14.0" textAlignment="CENTER" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
+      <Label fx:id="notificationLabel" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#popupTable" prefWidth="14.0" textAlignment="CENTER" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
          <StackPane.margin>
             <Insets right="6.0" top="5.0" />
          </StackPane.margin>
