--- a/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
@@ -20,7 +20,8 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
-                <Button fx:id="ModCategoryConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
+                  <Button mnemonicParsing="false" onAction="#onClickDelete" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.deleteCategory" />
               </items>
             </ToolBar>
          </top>
@@ -46,9 +47,7 @@
                               
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryToModify" wrappingWidth="200.0" />
                               <Region prefHeight="70.0" prefWidth="81.0" HBox.hgrow="ALWAYS" />
-                              <ChoiceBox fx:id="pickCategoryList"
-                                 onAction="#fillOldCategoryName" prefWidth="155.0"
-                                 style="-fx-background-color: #7190de;" />
+                              <ChoiceBox fx:id="pickCategoryList" onAction="#fillOldCategoryName" prefWidth="155.0" style="-fx-background-color: #7190de;" />
                            </children>
                         </HBox>
                      </children>
@@ -59,7 +58,7 @@
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputNewCategoryName" wrappingWidth="200.0" />
                         <Region prefHeight="93.0" prefWidth="68.0" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id= "newCategoryName" prefHeight="23.0" prefWidth="155.0" promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
+                        <TextField fx:id="newCategoryName" prefHeight="23.0" prefWidth="155.0" promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
                      </children>
                   </HBox>
                </children>
