--- a/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
@@ -22,10 +22,8 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
-                  <Button fx:id="ModTaskConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
+                  <Button mnemonicParsing="false" onAction="#onClickDelete" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.deleteTask" />
                </items>
             </ToolBar>
          </top>
@@ -46,7 +44,7 @@
                      <children>
                         <HBox prefHeight="40.0" prefWidth="200.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryOfTask" wrappingWidth="155.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryOfTaskToModify" wrappingWidth="155.0" />
                               <Region prefHeight="36.0" prefWidth="78.0" />
                               <ChoiceBox fx:id="pickCategoryList" onAction="#fillTaskList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;">
                                  <HBox.margin>
