--- a/src/main/resources/edu/ncku/todo/ui/addCategory.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/addCategory.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,7 +21,7 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
-                  <Button fx:id="AddCategoryConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm">
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.confirm">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
@@ -27,28 +29,52 @@
             </ToolBar>
          </top>
          <center>
-            <VBox prefHeight="400.0" prefWidth="313.0" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="313.0" spacing="15.0" BorderPane.alignment="CENTER">
                <children>
-                  <Region prefHeight="15.0" prefWidth="200.0" />
-                  <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addCategory">
-                           <font>
-                              <Font name="System Bold" size="25.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
+                  <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addCategory">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </Text>
                   <Line endX="381.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region prefHeight="81.0" prefWidth="394.0" />
-                  <VBox>
+                  <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputCategoryName" wrappingWidth="200.0" />
-                              <Region prefHeight="70.0" prefWidth="32.0" HBox.hgrow="ALWAYS" />
-                              <TextField fx:id="categoryInputField" maxWidth="155.0" promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
+                              <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputCategoryName" wrappingWidth="200.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="70.0" prefWidth="200.0">
+                                 <children>
+                                    <TextField fx:id="categoryInputField" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                                 </children>
+                              </HBox>
                            </children>
+                           <VBox.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputColor" wrappingWidth="200.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="70.0" prefWidth="200.0">
+                                 <children>
+                                    <ColorPicker fx:id="colorPicker" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                                 </children>
+                              </HBox>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="5.0" right="5.0" />
+                           </VBox.margin>
                         </HBox>
                      </children>
                   </VBox>
