--- a/src/main/resources/edu/ncku/todo/ui/addTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/addTask.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -21,7 +22,7 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
-                  <Button fx:id="AddTaskConfirmButton" mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm">
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.confirm">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
@@ -29,41 +30,67 @@
             </ToolBar>
          </top>
          <center>
-            <VBox prefHeight="371.0" prefWidth="406.0" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="371.0" prefWidth="406.0" spacing="15.0" BorderPane.alignment="CENTER">
                <children>
-                  <Region prefHeight="15.0" prefWidth="200.0" />
-                  <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addTask">
-                           <font>
-                              <Font name="System Bold" size="25.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
+                  <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.addTask">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </Text>
                   <Line endX="381.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region prefHeight="47.0" prefWidth="394.0" />
-                  <VBox />
-                  <HBox prefHeight="60.0" prefWidth="401.0">
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.pickCategoryToAdd" wrappingWidth="200.0" />
-                        <Region prefHeight="60.0" prefWidth="23.0" HBox.hgrow="ALWAYS" />
-                        <ChoiceBox fx:id="pickCategoryList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.categoryOfTask" wrappingWidth="200.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <ChoiceBox fx:id="pickCategoryList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="228.0" prefHeight="60.0" prefWidth="401.0">
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="228.0" prefHeight="60.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputTaskName" wrappingWidth="200.0" />
-                        <Region prefHeight="60.0" prefWidth="23.0" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id= "newTaskName" prefHeight="23.0" prefWidth="155.0" promptText="%ui.TaskName" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.taskName" wrappingWidth="200.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <TextField fx:id="newTaskName" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="317.0" prefHeight="60.0" prefWidth="401.0">
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="317.0" prefHeight="60.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickDueDate" wrappingWidth="200.0" />
-                        <Region prefHeight="60.0" prefWidth="23.0" HBox.hgrow="ALWAYS" />
-                        <DatePicker fx:id="dueDatePicker" prefHeight="23.0" prefWidth="155.0" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.taskDueDate" wrappingWidth="200.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="401.0">
+                           <children>
+                              <DatePicker fx:id="dueDatePicker" prefHeight="23.0" prefWidth="155.0" />
+                           </children>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
