--- a/src/main/resources/edu/ncku/todo/ui/mainView.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/mainView.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -14,73 +13,62 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" opacity="0.9" prefHeight="548.0" prefWidth="819.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.MainViewController">
+<AnchorPane id="AnchorPane" opacity="0.9" prefHeight="550.0" prefWidth="820.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.MainViewController">
    <children>
-      <BorderPane prefHeight="548.0" prefWidth="819.0">
-         <top>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="548.0" prefWidth="819.0">
+         <children>
+            <ToolBar prefHeight="40.0" style="-fx-background-color: #b8c5db;">
                <items>
-                  <Button fx:id="mainViewAddCategoryBotton" mnemonicParsing="false" onAction="#popupAddCategory" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.addCategory">
+                  <Button mnemonicParsing="false" onAction="#popupAddCategory" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.addCategory">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="mainViewAddTaskBotton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupAddTask" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.addTask">
+                  <Button layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupAddTask" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.addTask">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="mainViewModCategoryButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupModifyCategory" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.modifyCategory">
+                  <Button layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupModifyCategory" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.modifyCategory">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="mainViewModTaskButton" layoutX="142.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupModifyTask" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.modifyTask">
+                  <Button layoutX="142.0" layoutY="13.0" mnemonicParsing="false" onAction="#popupModifyTask" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.modifyTask">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="mainViewSettingButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" style="-fx-background-color: #7190de;" text="%ui.setting">
+                  <Button fx:id="settingButton" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" style="-fx-background-color: #7190de;" text="%ui.setting">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
                </items>
             </ToolBar>
-         </top>
-         <right>
-            <AnchorPane prefHeight="508.0" prefWidth="483.0" style="-fx-background-color: #a2b9de;" BorderPane.alignment="CENTER">
+            <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TabPane fx:id="categoryPane" prefWidth="340.0" style="-fx-background-color: #b4caed;" stylesheets="@tabPane.css" tabClosingPolicy="UNAVAILABLE" />
+                  <VBox prefWidth="480.0">
                      <children>
-                        <BorderPane prefHeight="61.0" prefWidth="483.0">
-                           <left>
-                              <HBox alignment="CENTER_RIGHT" prefWidth="80.0" BorderPane.alignment="CENTER">
+                        <HBox alignment="CENTER" prefHeight="60.0" prefWidth="480.0">
+                           <children>
+                              <HBox alignment="CENTER_RIGHT" prefWidth="80.0">
                                  <children>
-                                    <Button fx:id="prevBtn" mnemonicParsing="false" onAction="#onPrevMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" style="-fx-background-color: #7190de;" text="&lt;" textAlignment="CENTER">
+                                    <Button fx:id="prevBtn" mnemonicParsing="false" onAction="#onPrevMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #7190de;" text="&lt;" textAlignment="CENTER">
                                        <cursor>
                                           <Cursor fx:constant="DEFAULT" />
                                        </cursor>
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
                                     </Button>
                                  </children>
                               </HBox>
-                           </left>
-                           <right>
-                              <HBox alignment="CENTER_LEFT" prefWidth="80.0" BorderPane.alignment="CENTER">
-                                 <children>
-                                    <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" style="-fx-background-color: #7190de;" text="&gt;">
-                                       <cursor>
-                                          <Cursor fx:constant="DEFAULT" />
-                                       </cursor>
-                                    </Button>
-                                 </children>
-                              </HBox>
-                           </right>
-                           <center>
-                              <HBox alignment="CENTER" prefHeight="49.0" prefWidth="10.0" spacing="10" BorderPane.alignment="CENTER">
+                              <HBox alignment="CENTER" prefHeight="60.0" prefWidth="320.0" spacing="10">
                                  <children>
                                     <Region prefWidth="5.0" />
                                     <Text fx:id="yearText" fill="#3566d7" text="YYYY" textAlignment="CENTER" wrappingWidth="80.0">
@@ -95,15 +83,21 @@
                                     </Text>
                                  </children>
                               </HBox>
-                           </center>
-                           <top>
-                              <Region prefHeight="8.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
-                           </top>
-                           <bottom>
-                              <Region prefHeight="4.0" prefWidth="49.0" BorderPane.alignment="CENTER" />
-                           </bottom>
-                        </BorderPane>
-                        <HBox alignment="CENTER" prefHeight="45.0" prefWidth="483.0" spacing="16.0">
+                              <HBox alignment="CENTER_LEFT" prefWidth="80.0">
+                                 <children>
+                                    <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextMonth" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" onMouseReleased="#handleRelease" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #7190de;" text="&gt;">
+                                       <cursor>
+                                          <Cursor fx:constant="DEFAULT" />
+                                       </cursor>
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="45.0" spacing="16.0">
                            <children>
                               <Text fill="#3566d7" layoutX="75.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sun" textAlignment="CENTER" wrappingWidth="50.0">
                                  <font>
@@ -166,15 +160,12 @@
                               <Insets />
                            </opaqueInsets>
                         </HBox>
-                        <FlowPane fx:id="calendarPane" alignment="TOP_CENTER" hgap="5.0" prefHeight="400.0" prefWidth="483.0" vgap="5.0" />
+                        <FlowPane fx:id="calendarPane" alignment="TOP_CENTER" hgap="5.0" vgap="5.0" VBox.vgrow="ALWAYS" />
                      </children>
                   </VBox>
                </children>
-            </AnchorPane>
-         </right>
-         <left>
-            <TabPane fx:id="categoryPane" prefHeight="59.0" prefWidth="337.0" style="-fx-background-color: #b4caed;" stylesheets="@tabPane.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" />
-         </left>
-      </BorderPane>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
