--- a/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyCategory.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,46 +22,93 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
               <items>
-                  <Button mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
-                  <Button mnemonicParsing="false" onAction="#onClickDelete" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.deleteCategory" />
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.confirm" />
+                  <Button mnemonicParsing="false" onAction="#onClickDelete" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.delete" />
               </items>
             </ToolBar>
          </top>
          <center>
-            <VBox prefHeight="320.0" prefWidth="389.0" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="320.0" prefWidth="389.0" spacing="15.0">
                <children>
-                  <Region prefHeight="15.0" prefWidth="200.0" />
-                  <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.modifyCategory">
-                           <font>
-                              <Font name="System Bold" size="25.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
+                  <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.modifyCategory">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </Text>
                   <Line endX="381.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region prefHeight="53.0" prefWidth="393.0" />
-                  <VBox>
+                  <HBox alignment="CENTER" prefHeight="55.0">
                      <children>
-                        <HBox prefHeight="60.0" prefWidth="389.0">
+                        <HBox alignment="CENTER" prefHeight="60.0" prefWidth="389.0">
                            <children>
                               
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryToModify" wrappingWidth="200.0" />
-                              <Region prefHeight="70.0" prefWidth="81.0" HBox.hgrow="ALWAYS" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.pickCategory" wrappingWidth="200.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="389.0">
+                           <children>
                               <ChoiceBox fx:id="pickCategoryList" onAction="#fillOldCategoryName" prefWidth="155.0" style="-fx-background-color: #7190de;" />
                            </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
                         </HBox>
                      </children>
-                  </VBox>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
+                  </HBox>
                   <Line endX="381.0" layoutX="111.0" layoutY="26.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region layoutX="10.0" layoutY="72.0" prefHeight="52.0" prefWidth="393.0" />
-                  <HBox prefHeight="75.0" prefWidth="389.0">
+                  <HBox alignment="CENTER" prefHeight="55.0" prefWidth="379.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.inputNewCategoryName" wrappingWidth="200.0" />
-                        <Region prefHeight="93.0" prefWidth="68.0" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="newCategoryName" prefHeight="23.0" prefWidth="155.0" promptText="%ui.CategoryName" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newCategoryName" wrappingWidth="200.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="389.0">
+                           <children>
+                              <TextField fx:id="newCategoryName" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="55.0">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="389.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newColor" wrappingWidth="200.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="389.0">
+                           <children>
+                              <ColorPicker fx:id="newColorPicker" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
