--- a/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
+++ b/src/main/resources/edu/ncku/todo/ui/modifyTask.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -16,82 +15,200 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="385.0" prefWidth="401.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.ModifyTaskController">
+<AnchorPane id="AnchorPane" minHeight="350.0" opacity="0.85" prefHeight="400.0" prefWidth="401.0" style="-fx-background-color: #a2b9de;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ncku.todo.ui.ModifyTaskController">
    <children>
-      <BorderPane layoutY="-1.0" prefHeight="385.0" prefWidth="401.0">
+      <BorderPane layoutY="-1.0" prefHeight="400.0" prefWidth="401.0">
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="400.0" style="-fx-background-color: #b8c5db;" BorderPane.alignment="CENTER">
                <items>
-                  <Button mnemonicParsing="false" onAction="#onConfirm" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.confirm" />
-                  <Button mnemonicParsing="false" onAction="#onClickDelete" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%ui.deleteTask" />
+                  <Button mnemonicParsing="false" onAction="#onConfirm" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.confirm" />
+                  <Button mnemonicParsing="false" onAction="#onClickDelete" onDragEntered="#handleHover" onDragExited="#handleExit" onMouseEntered="#handleHover" onMouseExited="#handleExit" onMousePressed="#handlePress" style="-fx-background-color: #7190de;" text="%gui.delete" />
                </items>
             </ToolBar>
          </top>
          <center>
-            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="389.0" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="389.0" spacing="8.0" BorderPane.alignment="CENTER">
                <children>
                   <Text fill="#1b488b" strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.modifyTask">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="15.0" top="15.0" />
+                        <Insets top="10.0" />
                      </VBox.margin>
                   </Text>
                   <Line endX="381.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region prefHeight="15.0" prefWidth="394.0" />
-                  <VBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
                      <children>
-                        <HBox prefHeight="40.0" prefWidth="200.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickCategoryOfTaskToModify" wrappingWidth="155.0" />
-                              <Region prefHeight="36.0" prefWidth="78.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.categoryOfTask" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="200.0">
+                           <children>
                               <ChoiceBox fx:id="pickCategoryList" onAction="#fillTaskList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;">
                                  <HBox.margin>
                                     <Insets />
-                                 </HBox.margin></ChoiceBox>
+                                 </HBox.margin>
+                              </ChoiceBox>
                            </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
                         </HBox>
-                        <HBox layoutX="10.0" layoutY="10.0" prefHeight="35.0" prefWidth="200.0">
+                     </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="200.0">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="200.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%ui.pickTaskToModify" wrappingWidth="155.0" />
-                              <Region prefHeight="36.0" prefWidth="78.0" HBox.hgrow="ALWAYS" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.pickTask" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="200.0">
+                           <children>
                               <ChoiceBox fx:id="pickTaskList" onAction="#fillOldTaskProperty" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
                            </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
                         </HBox>
                      </children>
-                  </VBox>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
+                  </HBox>
                   <Line endX="381.0" layoutX="111.0" layoutY="26.0" stroke="#b8c5db" strokeWidth="8.0" />
-                  <Region layoutX="10.0" layoutY="72.0" prefHeight="21.0" prefWidth="394.0" />
-                  <HBox prefHeight="40.0" prefWidth="401.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.pickNewCategory" wrappingWidth="155.0" />
-                        <Region prefHeight="40.0" prefWidth="81.0" HBox.hgrow="ALWAYS" />
-                        <ChoiceBox fx:id="newCategoryList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newCategoryOfTask" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <ChoiceBox fx:id="newCategoryList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="228.0" prefHeight="40.0" prefWidth="401.0">
+                  <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="228.0" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputNewTaskName" wrappingWidth="155.0" />
-                        <Region prefHeight="93.0" prefWidth="65.0" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="newTaskName" prefHeight="23.0" prefWidth="155.0" promptText="%ui.TaskName" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newTaskName" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <TextField fx:id="newTaskName" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="317.0" prefHeight="40.0" prefWidth="401.0">
+                  <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="317.0" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputNewDueDate" wrappingWidth="155.0" />
-                        <Region prefHeight="40.0" prefWidth="75.0" HBox.hgrow="ALWAYS" />
-                        <DatePicker fx:id="dueDatePicker" prefHeight="23.0" prefWidth="155.0" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newDueDate" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <DatePicker fx:id="dueDatePicker" prefHeight="23.0" prefWidth="155.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="40.0" prefWidth="401.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.inputNewStatus" wrappingWidth="155.0" />
-                        <Region prefHeight="40.0" prefWidth="75.0" HBox.hgrow="ALWAYS" />
-                        <ChoiceBox fx:id="newStatusList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%gui.newStatus" wrappingWidth="155.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="401.0">
+                           <children>
+                              <ChoiceBox fx:id="newStatusList" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #7190de;" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </VBox>
          </center>
          <left>
